Final update for the first alpha release (a0.0.1), added new material, fixed textures, finished grinder implementation, planning for 1.21.5.

--- a/src/main/resources/assets/danismod/lang/en_us.json
+++ b/src/main/resources/assets/danismod/lang/en_us.json
@@ -9,10 +9,15 @@
   "item.danismod.lion_spawn_egg": "Lion Spawn Egg",
   "item.danismod.elephant_spawn_egg": "Elephant Spawn Egg",
   "item.danismod.buffalo_spawn_egg": "Buffalo Spawn Egg",
+  "item.danismod.reinforced_ivory": "Reinforced Ivory",
 
   "entity.danismod.lion": "Lion",
   "entity.danismod.elephant": "Elephant",
   "entity.danismod.buffalo": "Buffalo",
 
-  "itemGroup.danismod.mod_group": "Dani's Mod"
+  "block.danismod.ivory_grinder": "Ivory Grinder",
+
+  "itemGroup.danismod.mod_group": "Dani's Mod",
+
+  "container.danismod.ivory_grinder": "Ivory Grinder"
 }
